---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2020.12.12
  Features:
    - More mods compatibility. Battery Locomotive has come to handle `script_raised_built` and `script_raised_destroy` events.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020.12.05
  Features:
    - Changed base game version to Factorio 1.1
    - Added support to tip and tricks
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020.10.17
  Bugfixes:
    - Fixed Battery Locomotive MK2 fuel value. Up until now, it was one-third of the designed value.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020.06.21
  Changes:
    - Initial release.