@@ -1,6 +1,6 @@
 {
   "name": "BatteryLocomotive",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "title": "Battery Locomotive",
   "author": "KoharaKazuya",
   "factorio_version": "1.1",
